2011-08-03    <zag@manzanillo>

 	* bl/vl/app/importer/biosample.py: now it can be used to import
	PlateWells. Removed plate_well.py.

2011-08-02    <simleo@neuron.crs4.it>

	* bl/vl/app/check_rs.py: does not read the full annotation table
	into memory anymore.
	(SnpAnnReader): changed to use bl.vl.utils.snp.split_mask to split
	masks and to return a (label, rs_label, split_mask) tuple.

	* bl/vl/utils/snp.py: code cleanup; convert_to_top now supports
	split masks.

2011-08-01    <zag@manzanillo>

	* galaxy/tools/VL/tools/map_vid.xml: Added.

	* galaxy/tools/VL/importer/biosample.xml: Added

	* galaxy: Renamed galaxy_ui to galaxy. Restructured to be easily
	installed in a standard galaxy deployment.

	* galaxi_ui: Added. This should provide galaxy based interfaces to
	galaxy. It requires a (minimally) hacked version of galaxy.

	* bl/vl/app/importer/main.py: Added. This should simplify
	supporting galaxy_ui

2011-07-31    <zag@manzanillo>

	* tools/create_tables: Changed name from create_snp_tables, added
	support for ehr tables.

	* bl/vl/kb/drivers/omero/objects_collections.py (ContainerStatus):
	Added.
	(Container): Added field 'status'.

	* bl/vl/kb/drivers/omero/demographic.py (InformedConsent): added.
	(Demographic): added.

2011-07-29    <simleo@neuron.crs4.it>

	* tools/check_rs.py: moved DbSnpReader to bl/core. Changed to
	compute a "consensus" sequence for multiple matches.

2011-07-29    <zag@manzanillo>

	* bl/vl/app/importer/study.py: Added a study module. It is
	probably an overkill, but it was needed.

	* tools/importer: Now supports importing study and
	biosample. Explicit blood and dna samples have been removed.

	* bl/vl/app/importer/biosample.py (do_register): Added a biosample
	module. It makes blood_sample and dna_sample obsolete.

2011-07-28    <simleo@neuron.crs4.it>

	* tools/check_rs.py (SnpAnnReader): changed to compile mask
	pattern only once.

2011-07-28    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/genotyping.py