@@ -1,3 +1,9 @@
+2011-08-03    <simleo@neuron.crs4.it>
+
+	* bl/vl/utils/snp.py: rewrote to work without side effects on a
+	split mask (this is emphasized by the fact that a split mask is
+	now a tuple).
+
 2011-08-03    <zag@manzanillo>
 
  	* bl/vl/app/importer/biosample.py: now it can be used to import
